--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,13 @@
 {
-  "name": "body_web_app",
+  "name": "body-measurement-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "node.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node api/index.js"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "multer": "^1.4.5-lts.1"
+    "express": "^4.17.1",
+    "multer": "^1.4.2",
+    "cors": "^2.8.5"
   }
 }
