--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,11 +1,10 @@
 {
     "version": 2,
     "builds": [
-      { "src": "api/*.js", "use": "@vercel/node" },
-      { "src": "predict.py", "use": "@vercel/python" }
+      { "src": "server.js", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "/api/index.js" }
+      { "src": "/api/(.*)", "dest": "/server.js" }
     ]
   }
   
